mash: Remove use of InputMethodManager in Wayland server.

We're currently using InputMethodManager in the Wayland server to
observe changes in the keyboard layout. However, under mash, exo will be
in the ash process and InputMethodManager will be in the chrome process,
so we cannot depend on InputMethodManager from the Wayland server.

We remove the use of InputMethodManager in the Wayland server for
observing keyboard changes by using ImeController instead, which uses
Mojo for communication.

We also add a way of retrieving the current keyboard layout from
ImeController. This is a similar design to how ImeController handles
caps lock, but it's simpler because we never need to set the layout
from ash side. Changes to layout on the chrome side just propagate
to the ash side from ImeControllerClient to ImeController.

Bug: 772382
Change-Id: I84df1ee1b7e0f54716125fec9d4cd49f3442ed79
Reviewed-on: https://chromium-review.googlesource.com/961505
Commit-Queue: Darren Shen <shend@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Oliver Chang <ochang@chromium.org>
Reviewed-by: James Cook <jamescook@chromium.org>
Cr-Commit-Position: refs/heads/master@{#543958}
Former-commit-id: 29b26a4ba97065b4247debb2a5c759dacb8c5a88