ash/ime/ime_controller.cc
@@ -136,6 +136,14 @@ void ImeController::UpdateCapsLockState(bool caps_enabled) {
     observer.OnCapsLockChanged(caps_enabled);
 }
 
+void ImeController::OnKeyboardLayoutNameChanged(
+    const std::string& layout_name) {
+  keyboard_layout_name_ = layout_name;
+
+  for (ImeController::Observer& observer : observers_)
+    observer.OnKeyboardLayoutNameChanged(layout_name);
+}
+
 void ImeController::SetExtraInputOptionsEnabledState(
     bool is_extra_input_options_enabled,
     bool is_emoji_enabled,
