ash/ime/test_ime_controller.h
@@ -31,6 +31,7 @@ class ASH_EXPORT TestImeController : mojom::ImeController {
   void SetImesManagedByPolicy(bool managed) override;
   void ShowImeMenuOnShelf(bool show) override;
   void UpdateCapsLockState(bool enabled) override;
+  void OnKeyboardLayoutNameChanged(const std::string& layout_name) override;
   void SetExtraInputOptionsEnabledState(bool is_extra_input_options_enabled,
                                         bool is_emoji_enabled,
                                         bool is_handwriting_enabled,
@@ -43,6 +44,7 @@ class ASH_EXPORT TestImeController : mojom::ImeController {
   bool managed_by_policy_ = false;
   bool show_ime_menu_on_shelf_ = false;
   bool is_caps_lock_enabled_ = false;
+  std::string keyboard_layout_name_;
   bool is_extra_input_options_enabled_ = false;
   bool is_emoji_enabled_ = false;
   bool is_handwriting_enabled_ = false;
